--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@
 	display: flex;
 	justify-content: space-between;
 
-		.target{
+		.target, .enemyBullet{
 		position: absolute;
 		transform: rotate(180deg);
 		}
