--- a/src/App.scss
+++ b/src/App.scss
@@ -119,7 +119,7 @@
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
-.cloud {
+.cloud ,.doubleBullet{
 	position: absolute;
 	background-size: 100%;
 }
