--- a/src/App.scss
+++ b/src/App.scss
@@ -36,10 +36,11 @@
 	display: flex;
 	justify-content: space-between;
 
-		.target, .enemy{
+		.target,.enemy{
 		position: absolute;
-		transform: rotate(180deg);
+		transform: translate(-50%,-50%) rotate(180deg);
 		}
+
 	}
 }
 
@@ -52,7 +53,7 @@
 	width: 6vw;
 	height: 10%;
 	bottom: 0%;
-	transform: translate(-50%,0%),
+	transform: translate(-50%,-50%),
 }
 
 .health-bar {
@@ -126,7 +127,7 @@
 .cloud ,.doubleBullet,.ship{
 	position: absolute;
 	background-size: 100%;
-	transform: translate(50%,-50%),
+	transform: translate(-50%,-50%),
 
 }
 
